feat(api): get repair payment status
